feat: implementa funcionalidade de calendário com ajustes e melhorias nas classes envolvidas
- Adiciona suporte ao calendário na aplicação
- Ajusta e melhora classes relacionadas para melhor integração
- Refatora código para maior eficiência e manutenção